@@ -2,7 +2,7 @@ The version number is hardcoded into sdparm.c (in a C string);
 the rpm spec file: sdparm.spec ; the debian/changelog file;
 and the configure.ac file (in the AC_INIT item).
 
-ChangeLog for sdparm-1.08 [20121015] [svn: r199]
+ChangeLog for sdparm-1.08 [20121026] [svn: r200]
   - device id VPD: add protocol specific port identifier
   - control extension mpage: add max sense data length
   - power condition mpage: FIDCPC->CCF_IDLE,
@@ -14,7 +14,8 @@ ChangeLog for sdparm-1.08 [20121015] [svn: r199]
     - change --enable-no-linux-bsg to --disable-linuxbsg
     - add --disable-scsistrings to reduce utility size
       with non-libsgutils build
-  - point svn:externals to rev 461 of sg3_utils
+  - win32: fixes for cygwin version 1.7.17 headers
+  - point svn:externals to rev 464 of sg3_utils
 
 ChangeLog for sdparm-1.07 [20120121] [svn: r188]
   - LB provisioning + Block limits VPD pages to sbc3r27
